--- a/manager/src/main/res/layout/adb_pairing_tutorial_activity.xml
+++ b/manager/src/main/res/layout/adb_pairing_tutorial_activity.xml
@@ -100,6 +100,8 @@
                     android:text="@string/notification_settings"
                     android:textColor="?colorOnError"
                     app:backgroundTint="?colorError"
+                    app:iconTint="?colorOnError"
+                    app:iconTintMode="src_in"
                     app:icon="@drawable/ic_outline_open_in_new_24"
                     app:iconPadding="16dp" />
 
