feat(service-auto-start): add auto-start support for rootless devices
This feature is tested working on GrapheneOS Android 14, Bluejay

--- a/manager/src/main/res/xml/settings.xml
+++ b/manager/src/main/res/xml/settings.xml
@@ -10,6 +10,11 @@
             android:summary="@string/settings_start_on_boot_summary"
             android:title="@string/settings_start_on_boot" />
 
+        <rikka.material.preference.MaterialSwitchPreference
+            android:key="start_on_boot_wireless"
+            android:summary="@string/settings_start_on_boot_wireless_summary"
+            android:title="@string/settings_start_on_boot_wireless" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/settings_language">
