--- a/manager/src/main/res/layout/app_list_item.xml
+++ b/manager/src/main/res/layout/app_list_item.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?textAppearanceBodyLarge"
-            tools:text="Shizuku" />
+            tools:text="Shizuku™" />
 
         <TextView
             android:id="@android:id/summary"
